syntax = "proto3";

option go_package = "gholi-fly-hotel/api/pb";


enum BookingStatus {
    BOOKING_UNKNOWN = 0;
    BOOKING_PENDING = 1;
    BOOKING_CONFIRMED = 2;
    BOOKING_CANCELLED = 3;
}

message BookingCreateRequest {
    string checkIn = 1 [json_name = "checkIn"];
    string checkOut = 2 [json_name = "checkOut"];
    string hotelId = 3 [json_name = "hotelId"];
}

message BookingCreateResponse {
    string bookingId = 1 [json_name = "bookingId"];
}

message GetAllBookingResponse {
    repeated Booking bookings = 1 [json_name = "bookings"];
}

message Booking {
    string id = 1 [json_name = "id"];
    string hotelId = 2 [json_name = "hotelId"];
    string userId = 3 [json_name = "userId"];
    string agencyId = 4 [json_name = "agencyId"];
    string checkIn = 5 [json_name = "checkIn"];
    string checkOut = 6 [json_name = "checkOut"];
    BookingStatus bookingStatus = 7 [json_name = "bookingStatus"];
}