syntax = "proto3";

option go_package = "gholi-fly-hotel/api/pb";

message HotelCreateRequest {
    string name = 1 [json_name = "name"];
    string city = 2 [json_name = "city"];
    string ownerId = 3 [json_name = "ownerId"];
}

message HotelCreateResponse {
    string hotelId = 1 [json_name = "hotelId"];
}

message RoomCreateRequest {
    int32 roomNumber = 2 [json_name = "roomNumber"];
    int32 floor = 3 [json_name = "floor"];
    int32 size = 4 [json_name = "size"];
    int32 basePrice = 5 [json_name = "basePrice"];
    int32 agencyPrice = 6 [json_name = "agencyPrice"];
}

message RoomCreateResponse {
    string roomId = 1 [json_name = "roomId"];
}

enum StaffType {
    UNKNOWN = 0;
    OWNER = 1;
    MANAGER = 2;
    RECEPTIONIST = 3;
    CLEANER = 4;
    SECURITY = 5;
}

message StaffCreateRequest {
    string name = 1 [json_name = "name"];
    StaffType staffType = 2 [json_name = "staffType"];
}

message StaffCreateResponse {
    string staffId = 1 [json_name = "staffId"];
}

message GetAllHotelsRequest {}

message GetAllHotelsResponse {
    repeated Hotel hotels = 1 [json_name = "hotels"];
}

message GetAllHotelsByOwnerIDRequest {
    string ownerId = 1 [json_name = "ownerId"];
}

message GetHotelByIDRequest {
    string hotelId = 1 [json_name = "hotelId"];
}

message UpdateHotelRequest {
    string hotelId = 1 [json_name = "hotelId"];
    string name = 2 [json_name = "name"];
    string city = 3 [json_name = "city"];
}

message UpdateHotelResponse {}

message DeleteHotelRequest {
    string hotelId = 1 [json_name = "hotelId"];
}

message DeleteHotelResponse {}

message Hotel {
    string id = 1 [json_name = "id"];
    string name = 2 [json_name = "name"];
    string city = 3 [json_name = "city"];
}